# my-LLMs

./: .gitignore  README.md  dataset.ipynb  embedding_test.py  eval_figure.py  faster_training.py  generate_text.py  main.py  mamba.py  mamba_training.py  mauve_score.py  prepare_data.py  pyproject.toml  requirements.txt  training.py  transformer.py  xlstm.py
models/kat/: kat.py  train.py  utils.py
models/kat/training/: metrics.jsonl
models/mamba/: mamba.py  train.py  utils.py
models/mamba/training/: metrics.jsonl
models/transformer/: train.py  training.py  transformer.py  utils.py
models/transformer/training/: metrics.jsonl
models/xlstm/: lstm_blocks.py  train.py  utils.py  xlstm.py
vastai_setup/: setup.sh
