[project]
name = "custom-llm"
version = "0.1.0"
description = "Some LLM experiments on Wikipedia 2 article"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jupyterlab",
    "ipykernel",
    "jupyter>=1.1.1",

    "numpy",
    "matplotlib",

    "torch==2.7.*",
    "torchvision==0.22.*",
    "torchaudio==2.7.*",
    "torchinfo",

    "transformers",
    "datasets",
    "accelerate",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

#[tool.uv.sources]
#torch = [
#  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
#]
#torchvision = [
#  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
#]
#torchaudio = [
#  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
#]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu118", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

